Sets a new date for TokyoJS

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ layout: default
                         Make your way to
                     </div>
                     <div class="station-title">
-                        the undecided Venue.
+                        <a href="https://www.google.com/maps/place/4+Chome-1-20+Toranomon,+Minato-ku,+T%C5%8Dky%C5%8D-to+105-0001,+Japan/@35.6653031,139.7415638,17z/data=!3m1!4b1!4m5!3m4!1s0x60188b90f411fc97:0xc51854c20cec88ed!8m2!3d35.6653031!4d139.7437525?hl=en">
+                            Abeja, INC in Toranomon
+                        </a>
                     </div>
                 </div>
             </div>
@@ -187,7 +189,7 @@ layout: default
 
     }
 
-    var nextDate = new Date('2016/07/28 19:00:00+09');
+    var nextDate = new Date('2016/08/12 19:00:00+09');
     var msInDay  = 1000 * 60 * 60 * 24;
 
     var daysElm  = document.getElementById('days');
