Add Slack and Twitter links.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@ layout: default
             </div>
         </div>
         <div class="text">
+            <a href="http://tokyojs.herokuapp.com">Join</a> us on Slack or <a href="https://twitter.com/tokyo_js">follow</a> us on Twitter for the latest news.
+        </div>
+        <div class="text">
             More information for <a href="/attendees/">attendees</a>, <a href="/speakers/">speakers</a> and <a href="/sponsors/">sponsors</a>.
         </div>
         <div class="text">
