--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ layout: default
             %}
             
             {% include metro-stop.html 
-                title="<a href=\"/speakers/\">BE THE 4th SPEAKER!</a>" 
-                subtitle="Listen to the 4th speaker, or" 
+                title="Deep Learning by JavaScript" 
+                subtitle="Yuji Isobe" 
                 time="20:30"
             %}
             
